--- a/po4a.cfg
+++ b/po4a.cfg
@@ -4,6 +4,8 @@
            de:po/de.po \
            zh:po/zh.po
 
+[type:asciidoc] docs/version-1.30/modules/en/nav.adoc $lang:docs/version-1.30/modules/$lang/nav.adoc
+[type:asciidoc] docs/version-1.30/modules/en/partials/variables.adoc $lang:docs/version-1.30/modules/$lang/partials/variables.adoc
 [type:asciidoc] docs/version-1.30/modules/en/pages/introduction.adoc $lang:docs/version-1.30/modules/$lang/pages/introduction.adoc
 [type:asciidoc] docs/version-1.30/modules/en/pages/quick-start.adoc $lang:docs/version-1.30/modules/$lang/pages/quick-start.adoc
 [type:asciidoc] docs/version-1.30/modules/en/pages/organization.adoc $lang:docs/version-1.30/modules/$lang/pages/organization.adoc
