--- a/docs/version-1.30/antora-yml/antora-community.yml
+++ b/docs/version-1.30/antora-yml/antora-community.yml
@@ -5,3 +5,6 @@ prerelease: -dev
 start_page: en:introduction.adoc
 nav:
 - modules/en/nav.adoc
+- modules/de/nav.adoc
+- modules/es/nav.adoc
+- modules/zh/nav.adoc
